--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "axios": "^1.6.0",
+    "chart.js": "^4.5.0",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
-    "lucide-react": "^0.294.0",
+    "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
     "styled-components": "^6.1.1"
   },
@@ -33,4 +35,4 @@
     ]
   },
   "proxy": "http://localhost:8501"
-} 
+}
