--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-pandas
-matplotlib
-seaborn
-google-generativeai
-openpyxl
-python-dotenv
-fastapi
-uvicorn
-python-multipart
-aiofiles
-matplotlib
-seaborn
-google-generativeai
-openpyxl
-python-dotenv
-fastapi
-uvicorn
-python-multipart
-aiofiles
+pandas==2.0.3
+matplotlib==3.7.2
+seaborn==0.12.2
+google-generativeai==0.3.2
+openpyxl==3.1.2
+python-dotenv==1.0.0
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+aiofiles==23.2.1
+numpy==1.24.3
+flask==2.3.3
+flask-cors==4.0.0
+openai==1.3.0
+requests==2.31.0
+plotly==5.15.0
+xlrd==2.0.1
